Add PHP 8.1 requirement

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "ext-pdo": "*",
         "symfony/http-foundation": "^6.2",
         "twig/twig": "^3.5",
